# rag_system_betopia.ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/docs/: sample.md
data/eval/: golden.jsonl  golden_long_doc.jsonl
docs/: ARCHITECTURE.html  ARCHITECTURE.md  EVAL_PLAYBOOK.md  PRODUCTION_GAPS_AND_ROADMAP.md  PROJECT_HISTORY.md  RAG_OVERVIEW.md  SYSTEM_ARCHITECTURE.md
rag/: __init__.py  config.py  errors.py  eval_log.py  types.py
rag/agent/: __init__.py  decomposer.py  deep.py  retry.py  router.py  run.py  strategies.py
rag/api/: __init__.py  app.py  schemas.py  server.py
rag/cli/: ingest.py  query.py
rag/compression/: __init__.py  base.py  extractive.py  llm_compressor.py  noop.py
rag/embeddings/: __init__.py  base.py  default_provider.py
rag/eval/: __init__.py  __main__.py  golden.py  metrics.py  runner.py
rag/ingestion/: __init__.py  chunk_strategy.py  chunker.py  contextualizer.py  file_loader.py  hierarchical_chunker.py  ingest_pipeline.py  semantic_chunker.py  upload.py
rag/pipeline/: __init__.py  budget_manager.py  candidate_expansion.py  compressor.py  deduper.py  evidence_builder.py  llm_rewriter.py  query_cleaner.py  query_rewriter_v2.py  query_understanding.py  reranker.py  retriever.py  run.py  source_router.py
rag/reranking/: __init__.py  base.py  cross_encoder.py  fallback.py  http_remote.py
rag/retrieval/: __init__.py  hybrid.py  keyword.py  vector.py
rag/storage/: __init__.py  postgres.py
rag/storage/migrations/: 0001_init.sql
rag/synthesis/: __init__.py  base.py  llm.py  passthrough.py
rag/vector/: __init__.py  qdrant_client.py
scripts/: smoke_test.py
tests/: test_agent.py  test_api.py  test_budget_manager.py  test_candidate_expansion.py  test_chunk_strategy.py  test_chunker.py  test_compression.py  test_compressor.py  test_confidence_retry.py  test_contextualizer.py  test_deduper.py  test_deep_rag.py  test_eval_log.py  test_eval_metrics.py  test_evidence_builder.py  test_file_loader.py  test_hierarchical_chunker.py  test_hybrid_retrieval.py  test_llm_rewriter.py  test_qdrant_keyword_backend.py  test_query_cleaner.py  test_query_rewriter_v2.py  test_query_understanding.py  test_reranker.py  test_reranking_fallback.py  test_semantic_chunker.py  test_source_router.py  test_strategy_router.py  test_synthesis.py  test_upload.py
ui/: app.py
