[project]
name = "betopia-rag-mvp"
version = "0.1.0"
description = "MVP RAG system for Betopia.ai - returns EvidencePackage for outer agent."
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
rag-ingest = "rag.cli.ingest:main"
rag-query = "rag.cli.query:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
